--- a/main.html
+++ b/main.html
@@ -7,7 +7,32 @@
     <link rel="stylesheet" href="stylesheets/css/main.css">
     <script type="text/javascript" src="script/js/jquery.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="script/js/game.js" charset="utf-8"></script>
+    <style>
+      .white{
+        color:#FFF;
+      }
+      .red{
+        color:#F00;
+      }
+      .big{
+        font-size:60px;
+        font-weight:bold;
+      }
+      .left{
+        float:left;
+      }
+      .right{
+        float:right;
+      }
+      .clear{
+        clear:both;
+      }
+    </style>
   </head>
   <body>
+  <div id="debug" class="right white big">Debug</div>
+  <div id="debug-last-tile" class="right red big">Debug</div>
+
   </body>
 </html>
+
