--- a/main.html
+++ b/main.html
@@ -30,8 +30,8 @@
     </style>
   </head>
   <body>
-    <div id="debug" class="right white big">Debug</div>
-    <div id="debug-last-tile" class="right red big">Debug</div>
+    <div id="debug" class="right white big">Defence</div>
+    <div id="debug-last-tile" class="right red big">Tower</div>
 
   </body>
 </html>
