added simple description

--- a/main.html
+++ b/main.html
@@ -18,6 +18,10 @@
         font-size:60px;
         font-weight:bold;
       }
+      .medium{
+        font-size:30px;
+        font-weight:bold;
+      }
       .left{
         float:left;
       }
@@ -30,8 +34,16 @@
     </style>
   </head>
   <body>
-    <div id="debug" class="right white big">Defence</div>
-    <div id="debug-last-tile" class="right red big">Tower</div>
+    <div class="right">
+      <div id="debug" class="right white big">Defence</div>
+      <div id="debug-last-tile" class="right red big">Tower</div>
+      <div class="clear">&nbsp;</div>
+      <div class="right white medium">Movement: Arrows</div>
+      <div class="clear">&nbsp;</div>
+      <div class="right white medium">Space: Build Tower (-150 Gold)</div>
+      <div class="clear">&nbsp;</div>
+      <div class="right white medium">Killing a Creep: +50 Gold</div>
+    </div>>
 
   </body>
 </html>
