--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="right white medium">Space: Build Tower (-150 Gold)</div>
       <div class="clear">&nbsp;</div>
       <div class="right white medium">Killing a Creep: +50 Gold</div>
-    </div>>
+    </div>
 
   </body>
 </html>
