--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       <div class="right white medium">Space: Build Tower (-150 Gold)</div>
       <div class="clear">&nbsp;</div>
       <div class="right white medium">Killing a Creep: +50 Gold</div>
+      <div class="clear">&nbsp;</div>
+      <div class="right white medium"><a href="https://github.com/Deradon/GameBoilerplate">https://github.com/Deradon/GameBoilerplate</a></div>
     </div>
 
   </body>
