--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
       <div class="clear">&nbsp;</div>
       <div class="right white medium">Killing a Creep: +50 Gold</div>
       <div class="clear">&nbsp;</div>
-      <div class="right white medium"><a href="https://github.com/Deradon/GameBoilerplate">https://github.com/Deradon/GameBoilerplate</a></div>
+      <div class="right white medium">
+        <a href="https://github.com/Deradon/GameBoilerplate" style="color:white">
+          Link to: Github
+        </a>
+      </div>
     </div>
 
   </body>
