added space description

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       <div class="clear">&nbsp;</div>
       <div class="right white medium">Movement: Arrows</div>
       <div class="clear">&nbsp;</div>
+      <div class="right white medium">Build Tower: Space</div>
+      <div class="clear">&nbsp;</div>
       <div class="right white medium">Space: Build Tower (-150 Gold)</div>
       <div class="clear">&nbsp;</div>
       <div class="right white medium">Killing a Creep: +50 Gold</div>
